# difft-ccbot

./: README.md  pyproject.toml
ccbot/: __init__.py  __main__.py  auth.py  client.py  config.py  listener.py
