[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ccbot"
version = "0.1.0"
description = "Python SDK for sending Difft messages — bring your own bot credentials"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["requests>=2.28"]

[project.scripts]
ccbot = "ccbot.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ccbot*"]
