[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccbot"
version = "0.1.0"
description = "Python SDK for sending Difft messages — bring your own bot credentials"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["difft>=1.4"]

[project.scripts]
ccbot = "ccbot.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ccbot*"]
